feat: create 5.37.2 release notes

--- a/src/docs/shared/release-notes/5.37.2/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.2/changelog.mdx
@@ -41,6 +41,6 @@ Both issues have been addressed and the button will now behave as expected.
 
 Previously, the **Scroll to element** feature was only available with the Button page element.
 
-With this release, the feature has been also11 brought into the Lexical editor.
+With this release, the feature has been also brought into the Lexical editor.
 
 <Image src={pbScrollToElementLink} alt={"Scroll To Element Link"} />
